--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "babel-plugin-styled-components": "^2.0.2",
     "gatsby": "^4.6.2",
+    "gatsby-cli": "^4.6.1",
     "gatsby-plugin-image": "^2.6.0",
     "gatsby-plugin-sharp": "^4.6.0",
     "gatsby-plugin-styled-components": "^5.6.0",
