--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@fontsource/rowdies": "^4.5.2",
     "babel-plugin-styled-components": "^2.0.2",
     "gatsby": "^4.6.2",
     "gatsby-cli": "^4.6.1",
@@ -26,6 +27,7 @@
     "gatsby-transformer-sharp": "^4.6.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.3.1",
     "styled-components": "^5.3.3"
   }
 }
