--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fontsource/rowdies": "^4.5.2",
     "babel-plugin-styled-components": "^2.0.2",
+    "dotenv": "^16.0.0",
     "gatsby": "^4.6.2",
     "gatsby-cli": "^4.6.1",
     "gatsby-plugin-image": "^2.6.0",
