--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby-source-filesystem": "^4.6.0",
     "gatsby-source-sanity": "^7.3.2",
     "gatsby-transformer-sharp": "^4.6.0",
+    "hamburger-react": "^2.4.1",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
