--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-cool-img": "^1.2.12",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
-    "styled-components": "^5.3.3"
+    "styled-components": "^5.3.3",
+    "swiper": "^8.0.3"
   }
 }
