--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource/inter": "^4.5.3",
     "@fontsource/rowdies": "^4.5.2",
     "@fontsource/source-sans-pro": "^4.5.3",
+    "@fontsource/zen-kaku-gothic-antique": "^4.5.4",
     "babel-plugin-styled-components": "^2.0.2",
     "dotenv": "^16.0.0",
     "gatsby": "^4.6.2",
@@ -34,6 +35,7 @@
     "react-cool-img": "^1.2.12",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
+    "react-type-animation": "^1.1.2",
     "styled-components": "^5.3.3",
     "swiper": "^8.0.3"
   }
