--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@fontsource/inter": "^4.5.3",
     "@fontsource/rowdies": "^4.5.2",
     "@fontsource/source-sans-pro": "^4.5.3",
+    "@fontsource/supermercado-one": "^4.5.2",
     "@fontsource/zen-kaku-gothic-antique": "^4.5.4",
     "babel-plugin-styled-components": "^2.0.2",
     "dotenv": "^16.0.0",
