--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-cool-img": "^1.2.12",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
+    "react-text-transition": "^1.3.0",
     "react-type-animation": "^1.1.2",
     "styled-components": "^5.3.3",
     "swiper": "^8.0.3"
