--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby-transformer-sharp": "^4.6.0",
     "hamburger-react": "^2.4.1",
     "react": "^17.0.1",
+    "react-awesome-reveal": "^3.8.1",
     "react-cool-img": "^1.2.12",
     "react-dom": "^17.0.1",
     "react-icons": "^4.3.1",
