--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby": "^4.6.2",
     "gatsby-cli": "^4.6.1",
     "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-react-helmet": "^5.9.0",
     "gatsby-plugin-sharp": "^4.6.0",
     "gatsby-plugin-styled-components": "^5.6.0",
     "gatsby-source-filesystem": "^4.6.0",
@@ -36,6 +37,7 @@
     "react-awesome-reveal": "^3.8.1",
     "react-cool-img": "^1.2.12",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-icons": "^4.3.1",
     "react-text-transition": "^1.3.0",
     "react-type-animation": "^1.1.2",
