--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "gatsby": "^4.6.2",
     "gatsby-cli": "^4.7.0",
     "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-netlify": "^4.1.0",
     "gatsby-plugin-react-helmet": "^5.9.0",
     "gatsby-plugin-sharp": "^4.6.0",
     "gatsby-plugin-styled-components": "^5.6.0",
